# GPU_Convex_IoU

./: .gitignore  README.md  convexiou_cuda.cu  device_iou.cuh  pybind_wrapper.cpp  pyproject.toml  setup.py
convexiou/: __init__.py  gaucho.py
examples/: example_usage.py
gaucho_integration/: README.md  __init__.py  eval_map.py
tests/: test_all.py  test_comparison.py  test_gaucho_integration.py
